--- a/src/app/covid19-verification/covid19-verification.component.html
+++ b/src/app/covid19-verification/covid19-verification.component.html
@@ -3,69 +3,124 @@
     Have you experienced any of the following symptoms:
 </div>
 
-<label for='feverChills'>Fever or chills</label>
-<input for='feverChills' type='radio'  [(ngModel)]='feverChills'  name='feverChills' value=true [checked]="feverChills == false">    
-<label for='yes'>yes</label>   
-<input for='feverChills' type='radio'  [(ngModel)]='feverChills'   name='feverChills' value=false [checked]="feverChills == true"> 
-<label for='no'>no</label>
+<label for=feverChills>Fever or Chills</label>
+<label>
+    Yes
+    <input for="feverChills" [(ngModel)]="feverChills" type="radio" value="true"
+        name="feverChills">
+</label>
+<label>
+    No
+    <input for="feverChills" [(ngModel)]="feverChills" type="radio" value="false"
+        name="feverChills" checked=checked>
+</label>
+<br>
+
+<label for=cough>Cough</label>
+<label>
+    Yes
+    <input for="cough" [(ngModel)]="cough" type="radio" value="true"
+        name="feverChills">
+</label>
+<label>
+    No
+    <input for="cough" [(ngModel)]="cough" type="radio" value="false"
+        name="cough" checked=checked>
+</label>
+<br>
+
+<label for=shortnessOfBreath>Shortness of breathe or difficulty breathing</label>
+<label>
+    Yes
+    <input for="shortnessOfBreath" [(ngModel)]="shortnessOfBreath" type="radio" value="true"
+        name="shortnessOfBreath">
+</label>
+<label>
+    No
+    <input for="shortnessOfBreath" [(ngModel)]="shortnessOfBreath" type="radio" value="false"
+        name="shortnessOfBreath" checked=checked>
+</label>
+<br>
+
+<label for=fatigue>Fatigue</label>
+<label>
+    Yes
+    <input for="fatigue" [(ngModel)]="fatigue" type="radio" value="true"
+        name="fatigue">
+</label>
+<label>
+    No
+    <input for="fatigue" [(ngModel)]="fatigue" type="radio" value="false"
+        name="fatigue" checked=checked>
+</label>
+<br>
+
+<label for=muscleOrBodyAches>Muscle or body aches</label>
+<label>
+    Yes
+    <input for="muscleOrBodyAches" [(ngModel)]="muscleOrBodyAches" type="radio" value="true"
+        name="muscleOrBodyAches">
+</label>
+<label>
+    No
+    <input for="muscleOrBodyAches" [(ngModel)]="muscleOrBodyAches" type="radio" value="false"
+        name="muscleOrBodyAches" checked=checked>
+</label>
+<br>
+
+<label for=lossOfTasteSmell>New loss of taste or smell</label>
+<label>
+    Yes
+    <input for="lossOfTasteSmell" [(ngModel)]="lossOfTasteSmell" type="radio" value="true"
+        name="lossOfTasteSmell">
+</label>
+<label>
+    No
+    <input for="lossOfTasteSmell" [(ngModel)]="lossOfTasteSmell" type="radio" value="false"
+        name="lossOfTasteSmell" checked=checked>
+</label>
+<br>
+
+<label for=soreThroat>Sore throat</label>
+<label>
+    Yes
+    <input for="soreThroat" [(ngModel)]="soreThroat" type="radio" value="true"
+        name="soreThroat">
+</label>
+<label>
+    No
+    <input for="soreThroat" [(ngModel)]="soreThroat" type="radio" value="false"
+        name="soreThroat" checked=checked>
+</label>
+<br>
+
+<label for=nauseaVomiting>Nausea</label>
+<label>
+    Yes
+    <input for="nauseaVomiting" [(ngModel)]="nauseaVomiting" type="radio" value="true"
+        name="nauseaVomiting">
+</label>
+<label>
+    No
+    <input for="nauseaVomiting" [(ngModel)]="nauseaVomiting" type="radio" value="false"
+        name="nauseaVomiting" checked=checked>
+</label>
+<br>
+
+<label for=diarrhea>Diarrhea</label>
+<label>
+    Yes
+    <input for="diarrhea" [(ngModel)]="diarrhea" type="radio" value="true"
+        name="diarrhea">
+</label>
+<label>
+    No
+    <input for="diarrhea" [(ngModel)]="diarrhea" type="radio" value="false"
+        name="diarrhea" checked=checked>
+</label>
 <br>
 
 
-<label for='cough'>Cough</label>
-<input type='radio' [(ngModel)]='cough' value='yes' name='cough' value='true' [checked]='cough == true'>   
-<label for='yes'>yes</label>           
-<input type='radio' [(ngModel)]='cough' value='no' checked name='cough' value='false' [checked]='cough == true'> 
-<label for='no'>no</label>
-<br>
-
-<label for='shortnessOfBreath'>Shortness of breathe or difficulty breathing</label>
-<input type='radio'  [(ngModel)]='shortnessOfBreath' value='yes' name='shortnessOfBreath' value='true' [checked]='shortnessOfBreath == true'>    
-<label for='yes'>yes</label>           
-<input type='radio'  [(ngModel)]='shortnessOfBreath' checked name='shortnessOfBreath' value='false' [checked]='shortnessOfBreath == false'> 
-<label for='no'>no</label>
-<br>
-
-<label for='fatigue'>Fatigue</label>
-<input type='radio'  [(ngModel)]='fatigue' value='yes' name='fatigue' value='true' [checked]='fatigue == true'>     
-<label for='yes'>yes</label>          
-<input type='radio'  [(ngModel)]='fatigue' value='no' checked name='fatigue' value='false' [checked]='fatigue == false'> 
-<label for='no'>no</label>
-<br>
-
-<label for='muscleOrBodyAches'>Muscle or body aches</label>
-<input type='radio'  [(ngModel)]='muscleOrBodyAches' value='yes' name='muscleOrBodyAches' value='true' [checked]='muscleOrBodyAches == true'>  
-<label for='yes'>yes</label>              
-<input type='radio'  [(ngModel)]='muscleOrBodyAches' value='no' checked name='muscleOrBodyAches' value='false' [checked]='muscleOrBodyAches == false'> 
-<label for='no'>no</label>
-<br>
-
-<label for='lossOfTasteSmell'>New loss of taste or smell</label>
-<input type='radio'  [(ngModel)]='lossOfTasteSmell' value='yes' name='lossOfTasteSmell' value='true' [checked]='lossOfTasteSmell == true'>   
-<label for='yes'>yes</label>            
-<input type='radio'  [(ngModel)]='lossOfTasteSmell' value='no' checked name='lossOfTasteSmell' value='false' [checked]='lossOfTasteSmell == false'> 
-<label for='no'>no</label>
-<br>
-
-<label for='soreThroat'>Sore throat</label>
-<input type='radio'  [(ngModel)]='soreThroat' value='yes' name='soreThroat' value='true' [checked]='soreThroat == true'>    
-<label for='yes'>yes</label>            
-<input type='radio'  [(ngModel)]='soreThroat' value='no' checked name='soreThroat' value='false' [checked]='soreThroat == false'> 
-<label for='no'>no</label>
-<br>
-
-<label for='nauseaVomiting'>Nausea</label>
-<input type='radio'  [(ngModel)]='nauseaVomiting' value='yes' name='nauseaVomiting' value='true' [checked]='nauseaVomiting == true'>  
-<label for='yes'>yes</label>              
-<input type='radio'  [(ngModel)]='nauseaVomiting' value='no' checked name='nauseaVomiting' value='false' [checked]='nauseaVomiting == false'> 
-<label for='no'>no</label>
-<br>
-
-<label for='diarrhea'>Diarrhea</label>
-<input type='radio'  [(ngModel)]='diarrhea' value='yes' name='diarrhea' value='true' [checked]='diarrhea == true'> 
-<label for='yes'>yes</label>             
-<input type='radio'  [(ngModel)]='diarrhea' value='no' checked name='diarrhea' value='false' [checked]='diarrhea == false'> 
-<label for='no'>no</label>
-<br>
 
 <button type='button' (click)='symptomSubmit()'>Next question</button>
 </div>
