--- a/src/app/covid19-verification/covid19-verification.component.html
+++ b/src/app/covid19-verification/covid19-verification.component.html
@@ -1,4 +1,4 @@
-<div *ngIf='symptomQuestions'>
+<div *ngIf="symptomQuestions == 'true'">
 <div>
     Have you experienced any of the following symptoms:
 </div>
@@ -20,7 +20,7 @@
 <label>
     Yes
     <input for="cough" [(ngModel)]="cough" type="radio" value="true"
-        name="feverChills">
+        name="cough">
 </label>
 <label>
     No
@@ -125,49 +125,49 @@
 <button type='button' (click)='symptomSubmit()'>Next question</button>
 </div>
 
-<div *ngIf='testedPositiveQuestions'>
+<div *ngIf="testedPositiveQuestions=='true'">
     <label for='testedPositive'>Have you tested positive for Covid-19 in the past 10 days?</label>
     <br>
-<input type='radio'  [(ngModel)]='testedPositive' value='yes' name='testedPositive' value='true'>  
+<input type='radio'  [(ngModel)]='testedPositive' name='testedPositive' value='true'>  
 <label for='yes'>yes</label>              
-<input type='radio'  [(ngModel)]='testedPositive' value='no' checked name='testedPositive' value='false'> 
+<input type='radio'  [(ngModel)]='testedPositive' checked=checked name='testedPositive' value='false'> 
 <label for='no'>no</label>
 <br>
 <button type='button' (click)='testedPositiveSubmit()'>Next question</button>
 </div>
 
-<div *ngIf='awaitingTestQuestions'>
+<div *ngIf="awaitingTestQuestions =='true'">
 <label for='awaitingTestResults'>Are you currently awaiting the results from a Covid-19 test?</label>
 <br>
-<input type='radio'  [(ngModel)]='awaitingTestResults' value='yes' name='awaitingTestResults' value='true'>  
+<input type='radio'  [(ngModel)]='awaitingTestResults'  name='awaitingTestResults' value='true'>  
 <label for='yes'>yes</label>              
-<input type='radio'  [(ngModel)]='awaitingTestResults' value='no' checked name='awaitingTestResults' value='false'> 
+<input type='radio'  [(ngModel)]='awaitingTestResults' checked=checked name='awaitingTestResults' value='false'> 
 <label for='no'>no</label>
 <br>
 <button type='button' (click)='awaitingTestSubmit()'>Next question</button>
 </div>
 
-<div *ngIf='diagnosedQuestions'>
+<div *ngIf="diagnosedQuestions == 'true'">
 <label for='diagnosedQuestions'>Have you been diagnosed with COVID-19 by a licensed healthcare provider (for example, a doctor, nurse, 
 pharmacist, or other) in the past 10 days?
     </label>
     <br>
-<input type='radio'  [(ngModel)]='diagnosedResults' value='yes' name='diagnosedQuetions' value='true'>  
+<input type='radio'  [(ngModel)]='diagnosedResults'  name='diagnosedQuetions' value='true'>  
 <label for='yes'>yes</label>              
-<input type='radio'  [(ngModel)]='diagnosedResults' value='no' checked name='diagnosedQuestions' value='false'> 
+<input type='radio'  [(ngModel)]='diagnosedResults' checked=checked name='diagnosedQuestions' value='false'> 
 <label for='no'>no</label>
 <br>
 <button type='button' (click)='diagnosedSubmit()'>Next question</button>
 </div>
 
-<div *ngIf='suspectedQuestions'>
+<div *ngIf="suspectedQuestions == 'true'">
     <label for='suspectedQuestions'> Have you been told that you are suspected to have COVID-19 by a
         licensed healthcare provider in the past 10 days?
         </label>
         <br>
-<input type='radio'  [(ngModel)]='suspectedQuestions' value='yes' name='suspectedQuestions' value='true'>  
+<input type='radio'  [(ngModel)]='suspectedQuestions'  name='suspectedQuestions' value='true'>  
 <label for='yes'>yes</label>              
-<input type='radio'  [(ngModel)]='suspectedQuestions' value='no' checked name='suspectedQuestions' value='false'> 
+<input type='radio'  [(ngModel)]='suspectedQuestions' checked name='suspectedQuestions' value='false'> 
 <label for='no'>no</label>
 <br>
 <button type='button' (click)='symptomSubmit()'>Next question</button>
