Creating post request functionality for form submit

--- a/src/app/covid19-verification/covid19-verification.component.html
+++ b/src/app/covid19-verification/covid19-verification.component.html
@@ -185,3 +185,4 @@
 
 <div *ngIf="formSubmit=='true'"> Redirecting to home page</div>
 
+<button type='button' (click)='formSubmitFun()'>submit</button>
