Finishing form component

--- a/src/app/covid19-verification/covid19-verification.component.html
+++ b/src/app/covid19-verification/covid19-verification.component.html
@@ -19,7 +19,9 @@
 <input type='radio'  [(ngModel)]='diagnosedResults' checked=checked name='diagnosedResults' value="false"> 
 <label for='no'>no</label>
 <br>
+<button type='button' (click)='diagnosedPrevious()'>Previous question</button>
 <button type='button' (click)='diagnosedSubmit()'>Next question</button>
+
 </div>
 
 <div *ngIf="symptomQuestions == 'true'">
@@ -143,7 +145,9 @@
         name="diarrhea" checked=checked>
 </label>
 <br>
+<button type='button' (click)='symptomPrevious()'>Previous question</button>
 <button type='button' (click)='symptomSubmit()'>Next question</button>
+
 </div>
 
 <div *ngIf="contactQuestions=='true'">
@@ -155,7 +159,9 @@
 <input type='radio'  [(ngModel)]='contactCheck' checked=checked name='contactCheck' value="false"> 
 <label for='no'>no</label>
 <br>
+<button type='button' (click)='contactPrevious()'>Previous question</button>
 <button type='button' (click)='contactSubmit()'>Submit</button>
+
 </div>
 
 
@@ -167,22 +173,31 @@
 <input type='radio'  [(ngModel)]='tested' checked=checked name='tested' value='false'> 
 <label for='no'>no</label>
 <br>
-<button type='button' (click)='testedSubmit()'>Next question</button>
+<button *ngIf="previous3=='true'" type='button' (click)='havePrevious3()'>Previous question</button>
+<button type='button' (click)='testedSubmit()'>Select answer</button>
 </div>
 
-<div *ngIf="testedQuestions=='true'">
-    <label for='testedQuestionResults'>What were the the results of this test??</label>
+<div *ngIf="testedQuestionsResult=='true'">
+    <label for='testedQuestionResults'>What were the the results of this test?</label>
     <br>
 <input type='radio'  [(ngModel)]='testedPositive' name='tested' value='true'>  
 <label for='yes'>positive</label>              
 <input type='radio'  [(ngModel)]='testedPositive' checked=checked name='tested' value='false'> 
 <label for='no'>negative</label>
 <br>
-<button type='button' (click)='testedSubmit()'>Next question</button>
+<button type='button' (click)='testedResultSubmit()'>Select answer</button>
+<button type='button' (click)='testedQuestionsResultPrevious()'>Previous question</button>
 </div>
 
-<div *ngIf="getTested=='true'"> Please refrain from work until you can present a negative covid test</div>
+<div *ngIf="lastPositiveTest=='true'">
+    Please enter the date of your last positive COVID-19 test or diagnosis:
+    <input type='date' [(ngModel)]='lastTest'> 
+    <button type='button' (click)='formSubmitFun()'>Submit</button>
+    <br> 
+    <button *ngIf="previous1=='true'" (click)='datePrevious1()'>Previous question</button>
+    <button *ngIf="previous2=='true'" (click)='datePrevious2()'>Previous question</button>  
+   
+    
+</div>
 
-<div *ngIf="formSubmit=='true'"> Redirecting to home page</div>
 
-<button type='button' (click)='formSubmitFun()'>submit</button>
