--- a/src/app/covid19-verification/covid19-verification.component.html
+++ b/src/app/covid19-verification/covid19-verification.component.html
@@ -1,4 +1,4 @@
-<div class='container d-flex justify-content-center border border-primary p-3 mt-3 rounded'>
+<div class='container d-flex justify-content-center border p-3 mt-3 rounded'>
     <div class='form-check '>
 <div *ngIf="testedPositiveQuestions=='true'">
     <label for='testedPositive'>Have you tested positive for Covid-19 in the past 14 days?</label>
@@ -201,7 +201,6 @@
    
     
 </div>
-
 
 </div>
 <div *ngIf="inputError" class="alert alert-warning alert-dismissible fade show" role="alert">
