--- a/src/app/covid19-verification/covid19-verification.component.html
+++ b/src/app/covid19-verification/covid19-verification.component.html
@@ -1,7 +1,7 @@
 <div class="container-full">
     <div class="container-fluid h100">
         <div class="row h100">
-            <div class="col-md-2 p-3 bg-light">
+            <div class="col-md-2 p-3 bg-light sidebar">
                 <app-side-bar class="d-flex flex-column flex-shrink-0 h100"></app-side-bar>
             </div>
             <div class="col-md-10 align-self-center">
